--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "mysql2": "^3.11.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
