agregue prompt-sync

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.0",
+    "prompt-sync": "^4.2.0"
   },
-  "devDependencies": {},
   "description": ""
 }
